# weather-mqtt

backend/: .pdm-python  pyproject.toml
backend/src/: db.sqlite3
backend/src/backend/: settings.py  urls.py
backend/src/django_app/: asgi.py  config.py  pagination.py  routes.py  settings.py  urls.py  wsgi.py
backend/src/modules/places/: admin.py  api.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/src/modules/places/migrations/: 0001_initial.py
backend/src/modules/records/: admin.py  api.py  filters.py  models.py  serializers.py  urls.py
backend/src/modules/records/migrations/: 0001_initial.py
backend/src/modules/sensors/: admin.py  api.py  filters.py  models.py  serializers.py  urls.py
backend/src/modules/sensors/migrations/: 0001_initial.py
backend/src/modules/stations/: admin.py  api.py  filters.py  models.py  serializers.py  urls.py
backend/src/modules/stations/management/commands/: mqtt_listener.py  seed_station.py
backend/src/modules/stations/migrations/: 0001_initial.py  0002_station_sensors.py
backend/src/weather_data/: admin.py  models.py  serializers.py  urls.py  views.py
backend/src/weather_data/management/commands/: mqtt_listener.py
backend/src/weather_data/migrations/: 0001_initial.py
esp32_simulator/: .pdm-python  README.md  esp32_weather_simulator.ino  pyproject.toml
esp32_simulator/src/esp32_simulator/: weather_simulator.py
frontend/: bun.lockb
frontend/src/app/: globals.css  page.tsx
frontend/src/app/components/: StationStatsCard.tsx  WeatherCard.tsx
